<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/activity_main_cafeteira"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="cafeteira.com.cafeteira.Activity.MainActivityCafeteira"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/on_off_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/on_off_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on_off_title"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/on_off_title">

                <TextView
                    android:id="@+id/switch_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/on_off"
                    android:layout_centerVertical="true"/>

                <Switch
                    android:id="@+id/on_off_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_alignParentEnd="true"
                     />

            </RelativeLayout>

        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dip"
            android:background="@color/line_divider"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/on_off_layout"/>

        <RelativeLayout
            android:id="@+id/buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/on_off_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/kind_coffee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kind_of_coffee"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/kind_coffee"
                android:padding="5dp">

                <Button
                    android:id="@+id/short_coffee_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/short_button" />

                <Button
                    android:id="@+id/long_coffee_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/long_button"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dip"
            android:background="@color/line_divider"
            android:layout_marginTop="20dp"
            android:layout_below="@id/buttons_layout"/>

        <RelativeLayout
            android:id="@+id/level_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/buttons_layout"
            android:layout_marginTop="30dp">

            <RelativeLayout
                android:id="@+id/coffee_level_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/levels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/levels"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/levels"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/coffee_level_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coffee_level" />
                    <TextView
                        android:id="@+id/coffee_status_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0%"
                        android:layout_alignParentEnd="true"/>

                    <ProgressBar
                        android:id="@+id/coffee_progress_bar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@id/coffee_level_text"
                        android:layout_toStartOf="@id/coffee_status_text"/>
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/coffee_level_layout"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/water_level_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/water_level" />

                <TextView
                    android:id="@+id/water_status_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@id/water_level_text"
                    android:text="@string/empty"
                    android:textColor="@color/colorEmpty" />

            </RelativeLayout>

        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dip"
            android:background="@color/line_divider"
            android:layout_marginTop="20dp"
            android:layout_below="@id/level_layout"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/level_layout"
            android:layout_marginTop="30dp"
            android:id="@+id/layout_cup">

            <TextView
                android:id="@+id/cup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cup"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/statusLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/click_layout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textStatus"
                    android:text="@string/status"
                    android:textAllCaps="false"
                    android:paddingRight="5dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Problema conexão Dragonboard"
                    android:id="@+id/status"
                    android:background="@drawable/status_round_red"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cup"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:id="@+id/relativeLayout">

                <ImageView
                    android:id="@+id/glass_indicator_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_local_cafe_black_24dp"
                    android:layout_centerHorizontal="true"
                    android:alpha="0.1"/>

                <TextView
                    android:id="@+id/glass_indicator_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/glass_indicator_image"
                    android:text="@string/checking"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>

        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dip"
            android:background="@color/line_divider"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/layout_cup"/>

        <ImageButton
            android:id="@+id/button_speech"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@mipmap/ic_mic_black_24dp"
            android:alpha="1.0"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/layout_cup"
            android:layout_marginTop="20dp"
            android:scaleType="fitXY"/>

    </RelativeLayout>
</ScrollView>
